--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorPrimary">#D32F2F</color>
+    <color name="colorPrimaryDark">#D32F2F</color>
+    <color name="colorAccent">#FFFF00</color>
+
+    <color name="background">#E9E9E9</color>
+    <color name="background_night">#09091a</color>
+    <color name="black">#000</color>
+    <color name="white">#FFF</color>
+    <color name="gray">#bdbdbd</color>
+
+    <color name="divider_night">#09091a</color>
+
+    <color name="bg_dark">#E4E4E2</color>
+
+    <color name="dark_gray">#757575</color>
+    <color name="dark_gray_night">#6D6D6D</color>
+
+    <color name="dark_dark_gray">#424242</color>
+
+    <color name="bgColor_night">#161629</color>
+    <color name="off_white">#fffff0</color>
+
 </resources>
