--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,88 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
+
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:fontFamily">@font/open_sans_regular</item>
+        <!--<item name="preferenceTheme">@style/PreferenceThemeOverlay</item>-->
+        <item name="primaryTextColor">@color/dark_dark_gray</item>
+        <item name="secondaryTextColor">@color/dark_gray</item>
+        <item name="backgroundColor">@color/background</item>
+        <item name="dividerColor">@color/bg_dark</item>
+        <item name="bgColor">@color/white</item>
+        <item name="titleColor">@color/black</item>
+        <item name="cardBgColor">@color/white</item>
+        <item name="preferenceTheme">
+            @style/PreferenceThemeOverlay.v14.Material
+        </item>
     </style>
+
+
+    <style name="AppThemeDark" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:fontFamily">@font/open_sans_regular</item>
+        <item name="preferenceTheme">
+            @style/PreferenceThemeOverlay.v14.Material
+        </item>
+        <item name="primaryTextColor">@color/off_white</item>
+        <item name="secondaryTextColor">@color/gray</item>
+        <item name="backgroundColor">@color/background_night</item>
+        <item name="dividerColor">@color/divider_night</item>
+        <item name="bgColor">@color/bgColor_night</item>
+        <item name="titleColor">@color/white</item>
+        <item name="cardBgColor">@color/background_night</item>
+    </style>
+
+
+    <style name="AppThemeSearch" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:fontFamily">@font/open_sans_regular</item>
+        <item name="preferenceTheme">
+            @style/PreferenceThemeOverlay.v14.Material
+        </item>
+        <item name="primaryTextColor">@color/dark_dark_gray</item>
+        <item name="secondaryTextColor">@color/dark_gray</item>
+        <item name="backgroundColor">@color/background</item>
+        <item name="dividerColor">@color/bg_dark</item>
+        <item name="bgColor">@color/white</item>
+        <item name="titleColor">@color/black</item>
+        <item name="cardBgColor">@color/white</item>
+    </style>
+
+    <style name="AppThemeSearchDark" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:fontFamily">@font/open_sans_regular</item>
+        <item name="preferenceTheme">
+            @style/PreferenceThemeOverlay.v14.Material
+        </item>
+        <item name="primaryTextColor">@color/off_white</item>
+        <item name="secondaryTextColor">@color/gray</item>
+        <item name="backgroundColor">@color/background_night</item>
+        <item name="dividerColor">@color/divider_night</item>
+        <item name="bgColor">@color/bgColor_night</item>
+        <item name="titleColor">@color/white</item>
+        <item name="cardBgColor">@color/background_night</item>
+    </style>
+
+
+    <style name="WindowAnimationTransition">
+        <item name="android:windowEnterTransition" tools:targetApi="lollipop">@android:anim/fade_in</item>
+        <item name="android:windowExitTransition" tools:targetApi="lollipop">@android:anim/fade_out</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
